style: fix spacing

--- a/client/style.css
+++ b/client/style.css
@@ -14,6 +14,9 @@ html {
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
     box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    scroll-behavior: smooth;
 }
 html,
 body,
@@ -30,13 +33,14 @@ body {
     justify-content: start;
     align-items: center;
 
+    color: var(--text);
+    text-align: center;
+
     /* https://cssgradient.io  */
     background: var(--gradient-1);
     background: linear-gradient(129deg, var(--gradient-1) 36%, var(--gradient-2) 84%);
     min-height: 100vh;
-
-    color: var(--text);
-    text-align: center;
+    min-width: 100vw;
 }
 
 main {
